--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.2-10.12.2.1126-0.1.0"
+version = "1.7.2-10.12.2.1126-0.1.0a"
 group = "uk.zebcoding.supersteve" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "supersteve"
 
